# gogui

./: .gitignore  Cargo.toml  README.md
src/: api_error.rs  auth.rs  google.rs  input.rs  main.rs  modal.rs  models.rs  runtime.rs  storage.rs  workspace.rs
src/app/: calendar_state.rs  gmail_state.rs  mod.rs
src/calendar/: actions.rs  api.rs  client.rs  mod.rs  models.rs
src/gmail/: actions.rs  api.rs  client.rs  models.rs
src/ui/: calendar_ui.rs  gmail_ui.rs  mod.rs
